--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@ body {
   -webkit-tap-highlight-color: transparent;
   touch-action: manipulation;
 }
+
+a {
+  color: unset;
+  text-decoration: unset;
+}
