--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -1,4 +1,5 @@
 .orderId {
+  min-height: 1em;
   text-shadow: 0px 4px 32px rgba(51, 51, 255, 0.5), 0px 0px 8px rgba(51, 51, 255, 0.25),
     0px 0px 16px rgba(51, 51, 255, 0.25);
 }
