--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,3 +1,7 @@
+.detailsSection {
+  width: 480px;
+}
+
 .imageCont {
   width: max-content;
   margin: auto;
@@ -11,7 +15,6 @@
 }
 
 .name {
-  max-width: 520px;
   text-align: center;
 }
 
