--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -1,7 +1,18 @@
+.title {
+  height: 120px;
+  line-height: 120px;
+}
+
 .orderId {
-  min-height: 1em;
+  height: 100%;
   text-shadow: 0px 4px 32px rgba(51, 51, 255, 0.5), 0px 0px 8px rgba(51, 51, 255, 0.25),
     0px 0px 16px rgba(51, 51, 255, 0.25);
+}
+
+.loading {
+  height: 100%;
+  height: 120px;
+  line-height: 120px;
 }
 
 .okImageCont {
